== In git
* Refactored wire protocol code and added configurable timeout to allow for long
running step definitions. (#546 Matt Wynne)

== 0.5.1 2009-12-16

Small bugfix release.

=== Bugfixes
* Replaced dependency on json gem with an error message, so that the cucumber gem installs on JRuby. (Aslak Hellesøy)

== 0.5.0 2009-12-15

We're bumping to 0.5.0 for this release since all of the Rails code has now moved to a new gem - cucumber-rails.
Please see History.txt in cucumber-rails for details about what's new on the Rails side.

=== New features
* "Given" in Dutch is now aliased to "Gegeven" or "Stel". (Iain Hecker)
* New --i18n option to list keywords in various languages. (Aslak Hellesøy)
* Added a Tcl example using Sam Stephenson's ruby-tcl (Aslak Hellesøy)
* Added * as a synonym for Given/When/Then/And/But (for all i18n languages). (#462 Aslak Hellesøy)
* The HTML formatter produces a much nicer report, with TextMate link integration. (Rob Aldred)
* Wire protocol now supports table arguments, step definition source & regexp, snippets, pending, table diffing (Matt Wynne)

=== Changed Features
* Per-word trailing-space setting for step keywords using '<'.  See 'fr' in languages.yml for example. (#525 Gregory Hnatiuk)
* Formatters will no longer be passed File objects. They must use ensure_io, ensure_file or ensure_dir. (Aslak Hellesøy)

=== Bugfixes
* Exception messages are properly escaped in the HTML report. (Aslak Hellesøy)
* Improved UTF-8 support for Windows. (Aslak Hellesøy)
* Make #element_at / #table_at work on Webrat 0.6.0. This is now deprecated it in favour of #tableish from the cucumber-rails gem. (Aslak Hellesøy)
* JUnit formatter not handling multiline table steps inside Scenario Outlines (#538 Matt Wynne)
* Pending in scenario outline is red (#399 Matt Wynne)
* Allow optional step arguments to play happily with step transforms (Rob Holland)
* Regex escape the path when filtering the backtrace (Corey Donohoe & Simon Rozet)