@@ -8,3 +8,5 @@ end
 Cucumber::Rake::Task.new(:cucumber_screenshot) do |t|
   t.cucumber_opts = %w{--format html --out report.html}
 end
+
+task :default => :cucumber
