@@ -1,0 +1,1 @@
+default: --format html --out report.html --format pretty
