@@ -1,6 +1,8 @@
 == In git
-* Refactored wire protocol code and added configurable timeout to allow for long
-running step definitions. (#546 Matt Wynne)
+
+=== Bugfixes
+* Add #embed back to html formatter (#547 Brandon Faloona)
+* Refactored wire protocol code and added configurable timeout to allow for long running step definitions. (#546 Matt Wynne)
 
 == 0.5.1 2009-12-16
 
